<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="presentation.CarActivity">


    <Button
        android:id="@+id/buyButton"
        android:layout_width="224dp"
        android:layout_height="80dp"
        android:layout_marginLeft="550dp"
        android:layout_marginTop="15dp"
        android:text="Buy" />

    <RelativeLayout
        android:id="@+id/relative_dealer"
        android:layout_width="434dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_fuel"
        android:layout_marginTop="94dp"
        android:paddingVertical="10dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dealer:"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/text_dealer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="owner"
                android:textColor="@color/dark_purple"
                android:textSize="25sp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_EMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_dealer"
        android:layout_marginTop="1dp"
        android:paddingVertical="10dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Calculate Monthly Installments"
                android:textSize="30sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Down Payment:"
                android:textColor="@color/dark_purple"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/EMI_Downpayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Enter Down Payment"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Interest Rate (in %):"
                android:textColor="@color/dark_purple"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/EMI_InterestRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Enter Interest Rate (in %)" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Loan Term (in months):"
                android:textColor="@color/dark_purple"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/EMI_LoanTerm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Enter Loan Term (in Months)"
                android:inputType="number" />

            <Button
                android:id="@+id/EMI_Calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="Calculate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/EMI_Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$0"
                android:textColor="@color/dark_purple"
                android:textSize="25sp" />

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottomAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom" />


        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/display"
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/display"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/addFavorite"
        android:layout_width="240dp"
        android:layout_height="81dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="150dp"
        android:text="add favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/display"
        android:layout_marginTop="10dp"
        android:textColor="@color/dark_purple"
        android:text=""/>

    <RelativeLayout
        android:id="@+id/relative_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:layout_below="@+id/make"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Make"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/text_make"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="toyota"
                android:textColor="@color/dark_purple"
                android:textSize="25sp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_make"
        android:paddingVertical="10dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Model"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/text_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Camry"
                android:textColor="@color/dark_purple"
                android:textSize="25sp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_model"
        android:paddingVertical="10dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Price"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/text_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="some amount"
                android:textSize="25sp"
                android:textColor="@color/dark_purple"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_transmission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_price"
        android:paddingVertical="10dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Transmission"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/text_transmission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="automatic"
                android:textSize="25sp"
                android:textColor="@color/dark_purple"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_fuel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_transmission"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fuel"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/text_fuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="gasoline"
                android:textSize="25sp"
                android:textColor="@color/dark_purple"/>

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_fuel"
        android:paddingVertical="10dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description:"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/text_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="something"
                android:textSize="25sp"
                android:textColor="@color/dark_purple"/>




        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>

</ScrollView>