<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageMortarboard"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/buttonWDealer"
            android:layout_width="fill_parent"
            android:layout_height="94dp"
            android:text="Create a new dealer" />

        <Button
            android:id="@+id/buttonWoutDealer"
            android:layout_width="fill_parent"
            android:layout_height="93dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:text="Add car with an existing dealer" />

    </LinearLayout>

</RelativeLayout>